Added some autoscrolling functionality, and got the twitter/github links set up...about to start on creating a modal for when the user clicks on the email icon

--- a/style.css
+++ b/style.css
@@ -54,7 +54,16 @@ html, body {
 }
 
 #more_info {
-	margin-top: 40px;
+	display: table;
+	position: relative;
+	height: 100%;
+	width: 85%;
+	margin-top: 10px;
+	padding-top: 40px;
+}
+
+#more_info {
+	/*margin-top: 40px;*/
 }
 
 #myName {
