--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
 	width: 100%;
 	height: 100%;
+	background-color: #bcbcbc;
 }
 
 .navbar {
@@ -49,8 +50,12 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+}
+
+#top {	
 	background: url('NY_basketball_ct.jpg') no-repeat center center scroll;
 	background-size: cover;
+	border-bottom: 1px solid black;
 }
 
 #more_info {
@@ -100,6 +105,26 @@ h3 {
 .popover.right .arrow:after {
 	border-right-color: #E74C3C;
 }
+
+#info_plus_menu {
+	padding-bottom: 50px;
+}
+
+/*#city_street_wallpaper {
+	height: 900px;
+	width: 100%;
+	background: url('New-york-street.jpg');
+	background-size: cover;
+}*/
+
+/*#skyline_row {
+	display: table;
+	position: absolute;
+	z-index: 2;
+	width: 100%;
+	height: 50%;
+	background: url('NY_skylinesun_widescreen.jpg');
+}*/
 
 nav {
 	
