--- a/style_ie.css
+++ b/style_ie.css
@@ -1,6 +1,7 @@
 html, body {
 	width: 100%;
 	height: 100%;
+	/*background-color: #bcbcbc;*/
 }
 
 .navbar {
@@ -61,7 +62,7 @@ html, body {
 	position: relative;
 	height: 100%;
 	width: 85%;
-	margin-top: 10px;
+	margin-top: 40px;
 	padding-top: 40px;
 }
 
