--- a/style.css
+++ b/style.css
@@ -1,25 +1,23 @@
-html, body {
+html, body, .header {
 	width: 100%;
 	height: 100%;
 }
 
 .navbar {
-	margin-bottom: 0px;
 	background-color: #333333;
 	border: 0px;
 }
 
-.navbar-nav {
+.navbar, .navbar-nav {
 	margin-bottom: 0px;
+}
+
+.navbar-nav {
 	padding-bottom: 0px;
 }
 
 .nav > li > a:not(.text_link) {
 	padding: 10px 15px;
-}
-
-.text-vertical-center h1 {
-
 }
 
 .text-vertical-center {
@@ -29,14 +27,16 @@ html, body {
 	padding-bottom: 75px;
 }
 
+.text-vertical-center h1, .text-vertical-center h3, #back_to_top {
+	color: #000000;
+}
+
 .text-vertical-center h1 {
 	font-size: 6em;
-	color: #000000;
 	padding-bottom: 5px;
 }
 
 .text-vertical-center h3 {
-	color: #000000;
 	font-size: 1.25em;
 	padding-bottom: 15px;
 	letter-spacing: 3px;
@@ -44,20 +44,15 @@ html, body {
 }
 
 .header {
-	display: table;
 	position: relative;
-	width: 100%;
-	height: 100%;
 }
 
 #top {	
 	background: url('NY_basketball_ct.jpg') no-repeat center center scroll;
-	background-size: cover;
 	border-bottom: 1px solid black;
 }
 
 #more_info {
-	display: table;
 	position: relative;
 	height: 100%;
 	width: 85%;
@@ -67,6 +62,9 @@ html, body {
 
 #more_info_background {
 	background: url('NY_basketball_ct_upsidedown_blur_2.jpg') no-repeat center center scroll;
+}
+
+#top, #more_info_background {
 	background-size: cover;
 }
 
@@ -77,8 +75,11 @@ html, body {
 }
 
 .circle {
-	display: table;
 	margin: 0 auto;
+}
+
+.header, #more_info, .circle {
+	display: table;
 }
 
 .columnText {
@@ -107,69 +108,4 @@ html, body {
 
 #back_to_top {
 	font-size: 1.5em;
-	color: #000000;
-}
-
-footer {
-
-}
-
-nav {
-	
-}
-
-.nav {
-
-}
-
-.navbar-inverse {
-	
-}
-
-
-.navbar-right {
-
-}
-
-.fa {
-	
-}
-
-.link_icon {
-	
-}
-
-
-.container {
-
-}
-
-#welcome_row {
-
-}
-
-.active {
-
-}
-
-
-#myMug {
-	
-}
-
-
-#welcomeButton {
-		
-}
-
-.welcome {
-	
-}
-
-.jumbotron {
-
-}
-
-.footer {
-	
 }
