Getting ready to alter background image contrast to make text stand out better

--- a/style.css
+++ b/style.css
@@ -88,6 +88,9 @@ html, body, .header {
 
 .columnText {
 	text-align: justify;
+	font-size: 1.5em;
+	color: #FFFFFF;
+	margin-top: 10px;
 }
 
 /*For proper alignment of input fields in modal form*/
@@ -108,6 +111,8 @@ html, body, .header {
 
 #info_plus_menu {
 	padding-bottom: 50px;
+	-webkit-filter: brightness(40%) contrast(70%);
+	-moz-filter: brightness(40%) contrast(70%);
 }
 
 #back_to_top {
